--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     box-sizing: border-box;
   }
 
+  /* mobile */
 body {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
@@ -21,7 +22,7 @@ body {
     min-height: 100vh;
     color: var(--neutral-grayish-blue);
     background-color: var(--primary-cream);
-    padding: 2rem 2rem 0 2rem;
+  /*   padding: 2rem 2rem 0 2rem; */
   }
 
   h1 {
@@ -30,6 +31,11 @@ body {
     font-size: 2rem;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+.container {
+  width: 100%;
+  padding: 0 1.5rem;
 }
 
 .product__description {
@@ -41,7 +47,6 @@ body {
   display: flex;
   flex-direction: column;
   border-radius: 20px;
-  max-width: 95vw;
   margin-bottom: 2rem;
 } 
 
@@ -109,17 +114,17 @@ img {
     margin-right: 1.5rem;
   }
 
+  /* screen */
   @media only screen and (min-width: 768px) {
     body {
-      min-height: 100vh;
       display: grid;
       place-content: center;
     }
     #product {
       flex-direction: row;
       max-width: 600px;
-  }
-  img {
-    border-radius: 20px 0 0 20px;
-  }
+    }
+    img {
+      border-radius: 20px 0 0 20px;
+    }
 }
