--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body {
     min-height: 100vh;
     color: var(--neutral-grayish-blue);
     background-color: var(--primary-cream);
-  /*   padding: 2rem 2rem 0 2rem; */
   }
 
   h1 {
@@ -31,11 +30,12 @@ body {
     font-size: 2rem;
     margin-top: 10px;
     margin-bottom: 10px;
+    line-height: 2.8rem;
 }
 
-.container {
+#container {
   width: 100%;
-  padding: 0 1.5rem;
+  padding: 1.5rem 1rem;
 }
 
 .product__description {
@@ -54,6 +54,8 @@ img {
   border-radius: 20px 20px 0 0;
   flex: 1 0 50%;
   object-fit: cover;
+  width: 100%;
+  min-height: calc(40vh - 1.5rem);
  }
 
   .product__price__group {
@@ -80,6 +82,15 @@ img {
   .product__content {
     padding: 2rem;
     border-radius: 0 0 20px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    min-height: calc(60vh - 1.5rem);
+  }
+
+  .product__content p {
+    line-height: 1.8rem;
   }
 
   .product__category {
@@ -119,10 +130,12 @@ img {
     body {
       display: grid;
       place-content: center;
+      min-height: 100vh;
     }
     #product {
       flex-direction: row;
       max-width: 600px;
+      margin-bottom: auto;
     }
     img {
       border-radius: 20px 0 0 20px;
